List View Adapter Finished. Main Page only needs the onActivityResume function. A seperate object file was created to hand intent requests. The list item XML file was created. Basically all of these updates were copying code over from the old project with minor improvements.

--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -27,7 +27,7 @@
             android:layout_weight="1"
             android:layout_height="fill_parent"
             android:text="@string/btn_change_default"
-            android:id="@+id/btn_change_default"
+            android:id="@+id/btn_default"
         />
     </LinearLayout>
 
