--- a/app/src/main/res/layout/activity_default_page.xml
+++ b/app/src/main/res/layout/activity_default_page.xml
@@ -6,4 +6,23 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.oniel.volumescheduler.DefaultPage">
 
+    <TextView
+        android:text="@string/label_phone"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:text="@string/label_notification"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:text="@string/label_feedback"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:text="@string/label_media"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
 </RelativeLayout>
