--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainPage"
     android:clickable="true"
-    android:background="#004040">
+    android:background="#2f4056">
 
 
     <LinearLayout
@@ -19,6 +19,7 @@
             android:layout_weight="1"
             android:layout_height="fill_parent"
             android:text="@string/btn_new_setting"
+            android:textColor="@android:color/white"
             android:id="@+id/btn_new_setting"
         />
 
@@ -28,10 +29,13 @@
             android:layout_height="fill_parent"
             android:text="@string/btn_change_default"
             android:id="@+id/btn_default"
-        />
+            android:textColor="@android:color/white"
+
+            />
     </LinearLayout>
 
     <ListView
+        android:textColor="@android:color/white"
         android:clickable="true"
         android:longClickable="true"
         android:layout_width="fill_parent"
